# architecture-patterns-with-Python

./: README.md
architecture-patterns/: pyproject.toml
architecture-patterns/architecture_patterns/: allocation.py
architecture-patterns/tests/: test_allocation.py
domain_modeling_with_python/: pyproject.toml
domain_modeling_with_python/domain_modeling/src/allocation/: setup.py  tox.ini
domain_modeling_with_python/domain_modeling/src/allocation/model/: __init__.py  model.py
domain_modeling_with_python/domain_modeling/tests/allocation/model/unit/: test_allocate.py  test_batches.py
