[tool.poetry]
name = "architecture-patterns"
version = "0.1.0"
description = ""
authors = ["Hamid Adesokan <aadehamid@gmail.com>"]
readme = "README.md"
packages = [{include = "architecture_patterns"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
jupyter = "^1.0.0"
numpy = "^1.24.1"
plotly = "^5.12.0"
matplotlib = "^3.6.3"
polaris = "^0.1"
ipykernel = "^6.20.2"

[tool.poetry.group.test.dependencies]
pytest = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
